# gendersllnl

./: AUTHORS  ChangeLog  DISCLAIMER  META  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  bootstrap  config.status  configure  configure.ac  gendersllnl.spec  gendersllnl.spec.in  libtool
.github/workflows/: build.yml
compat/: Hostlist.pm  MANIFEST  Makefile.PL  Makefile.am  Makefile.in
config/: Make-rpm.mk  ac_debug.m4  ac_genders_includedir.m4  ac_genders_libdir.m4  ac_meta.m4  ac_perl_destdir.m4  ac_perl_extensions.m4  ac_perl_install_destdir.m4  config.h  config.h.in
man/: Makefile.am  Makefile.in  genders_altnodelist.3  genders_altnodelist_clear.3  genders_altnodelist_create.3  genders_altnodelist_destroy.3  genders_get_cluster.3  genders_getaltnodes.3  genders_getaltnodes_preserve.3  genders_isaltnode.3  genders_isnode_or_altnode.3  genders_string.3  genders_string_to_altnames.3  genders_string_to_altnames_preserve.3  genders_string_to_gendnames.3  genders_string_to_gendnames_preserve.3  genders_to.3  genders_to_altname.3  genders_to_altname_preserve.3  genders_to_gendname.3  genders_to_gendname_preserve.3  gendersllnl.3  libgendersllnl.3
src/: Makefile.am  Makefile.in
src/Gendersllnl/: Gendersllnl.pm  Gendersllnl.pm.in  MANIFEST  Makefile.PL  Makefile.am  Makefile.in  test.pl
src/Libgendersllnl/: Changes  Libgendersllnl.pm  Libgendersllnl.pm.in  Libgendersllnl.xs  MANIFEST  Makefile.PL  Makefile.am  Makefile.in  README  test.pl  typemap
src/libgendersllnl/: Makefile.am  Makefile.in  gendersllnl.c  gendersllnl.h  gendersllnl_example.c  hostlist.c  hostlist.h
