##*****************************************************************************
## $Id: Makefile.am,v 1.9 2007-04-21 14:36:22 chu11 Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

include config/Make-rpm.mk

DISTCHECK_CONFIGURE_FLAGS = --with-perl-destdir=$$dc_install_base

SUBDIRS = src man dist compat

EXTRA_DIST = META DISCLAIMER gendersllnl.spec
