##*****************************************************************************
## $Id: Makefile.am,v 1.10 2007-04-21 14:47:28 chu11 Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

DISTCHECK_CONFIGURE_FLAGS = --with-perl-destdir=$$dc_install_base

SUBDIRS = src man dist compat

EXTRA_DIST = META DISCLAIMER gendersllnl.spec
