##*****************************************************************************
## $Id: Makefile.am,v 1.11 2007-10-17 18:13:33 chu11 Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

DISTCHECK_CONFIGURE_FLAGS = --with-perl-destdir=$$dc_install_base

SUBDIRS = src man dist compat

EXTRA_DIST = META DISCLAIMER DISCLAIMER.UC gendersllnl.spec
