##*****************************************************************************
## $Id: Makefile.am,v 1.5 2005-05-06 23:30:36 achu Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

SUBDIRS = dist

man3_MANS = \
        libgendersllnl.3 \
        gendersllnl.3 \
        genders_get_cluster.3 \
        genders_altnodelist_create.3 \
        genders_altnodelist_clear.3 \
        genders_altnodelist_destroy.3 \
        genders_getaltnodes.3 \
        genders_getaltnodes_preserve.3 \
        genders_isaltnode.3 \
        genders_isnode_or_altnode.3 \
        genders_to_gendname.3 \
        genders_to_gendname_preserve.3 \
        genders_to_altname.3 \
        genders_to_altname_preserve.3 \
        genders_string_to_gendnames.3 \
        genders_string_to_gendnames_preserve.3 \
        genders_string_to_altnames.3 \
        genders_string_to_altnames_preserve.3

EXTRA_DIST = \
        libgendersllnl.3 \
        gendersllnl.3 \
        genders_get_cluster.3 \
        genders_altnodelist_create.3 \
        genders_altnodelist_clear.3 \
        genders_altnodelist_destroy.3 \
        genders_getaltnodes.3 \
        genders_getaltnodes_preserve.3 \
        genders_isaltnode.3 \
        genders_isnode_or_altnode.3 \
        genders_to_gendname.3 \
        genders_to_gendname_preserve.3 \
        genders_to_altname.3 \
        genders_to_altname_preserve.3 \
        genders_string_to_gendnames.3 \
        genders_string_to_gendnames_preserve.3 \
        genders_string_to_altnames.3 \
        genders_string_to_altnames_preserve.3