##*****************************************************************************
## $Id: Makefile.am,v 1.1.1.1 2003-05-13 01:20:50 achu Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

SUBDIRS = libgendersllnl
