##*****************************************************************************
## $Id: Makefile.am,v 1.2 2003-05-14 00:30:21 achu Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

SUBDIRS = libgendersllnl Libgendersllnl Gendersllnl
